--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
     "sass": "^1.66.1",
